# chess-robot

./: .gitignore  CMakeLists.txt  README.md  camera_development.md  requirements.txt
apps/: calibrate_camera.cpp  capture_board_corners.cpp  check_occupancy.cpp  common.cpp  common.hpp  detect_pieces.cpp  list_cameras.cpp  vision_main.cpp
config/: camera_config.yaml
include/chess_robot/: config.hpp  exceptions.hpp
include/chess_robot/board/: corners.hpp  detect_chessboard.hpp  detect_contour.hpp  detector.hpp  warp.hpp
include/chess_robot/calibration/: calibrator.hpp  checkerboard.hpp  matrices.hpp
include/chess_robot/camera/: capture.hpp  discovery.hpp  undistort.hpp
include/chess_robot/pieces/: classifier.hpp  occupancy.hpp  reference.hpp
include/chess_robot/utils/: chessboard.hpp
python/: README.md
python/src/: list_cameras.py  main.py
python/src/apps/: capture_corners.py
python/src/board/: warp.py
python/src/camera/: undistort.py
python/src/utils/: opencv.py
scripts/: cpp_env_activate.template.sh  run.sh  setup_cpp_env.sh
src/: __init__.py  calibrate_camera.py  capture_board_corners.py  config.cpp  config.py  exceptions.py  main.py
src/apps/: __init__.py  calibrate.py  cli.py  list_cameras.py  runtime.py  vision.py
src/board/: __init__.py  corners.cpp  corners.py  detect_chessboard.cpp  detect_chessboard.py  detect_contour.cpp  detect_contour.py  detector.cpp  detector.py  geometry.py  warp.cpp
src/calibration/: __init__.py  calibrator.cpp  calibrator.py  checkerboard.cpp  checkerboard.py  matrices.cpp  matrices.py
src/camera/: __init__.py  capture.cpp  capture.py  discovery.cpp  discovery.py  undistort.cpp
src/pieces/: classifier.cpp  occupancy.cpp  reference.cpp
src/utils/: __init__.py  chessboard.cpp  chessboard.py  opencv.py
